--- a/angular_admin/package.json
+++ b/angular_admin/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
+    "@tinymce/tinymce-angular": "^8.0.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tinymce": "^7.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
