--- a/angular_admin/package.json
+++ b/angular_admin/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.3.0",
     "@angular/material": "~17.3.6",
     "@angular/platform-browser": "^17.3.0",
@@ -25,6 +26,7 @@
     "@angular/ssr": "^17.3.0",
     "@tinymce/tinymce-angular": "^8.0.0",
     "express": "^4.18.2",
+    "firebase": "^10.11.1",
     "rxjs": "~7.8.0",
     "tinymce": "^7.1.0",
     "tslib": "^2.3.0",
